--- a/donate.html
+++ b/donate.html
@@ -405,7 +405,7 @@ font-size: 4.5vw;
 
 <ul class="topnav">
   <li><a class="active" href="#home">Get Involved</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a href="https://www.instagram.com/projectaddress/">News</a></li>
   <li><a href="#contact">Contact</a></li>
    <li><a href="https://projectaddressmmp460.github.io/projectaddressnyc/index.html">Home</a></li>
 <!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
