--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@ font-size: 4.5vw;
 <div class="row" id="nav">   
 
 <ul class="topnav">
-  <li><a class="active" href="#home">Get Involved</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a class="active" href="https://projectaddressmmp460.github.io/projectaddressnyc/getinvolved.html">Get Involved</a></li>
+  <li><a href="https://www.instagram.com/projectaddress/">News</a></li>
   <li><a href="#contact">Contact</a></li>
-   <li><a href="#donate">Donate</a></li>
+   <li><a href="https://projectaddressmmp460.github.io/projectaddressnyc/donate.html">Donate</a></li>
 <!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
   
 </ul>
