--- a/store.html
+++ b/store.html
@@ -95,7 +95,7 @@ display:block;
                 
                  <li><a class="active" href="https://projectaddressmmp460.github.io/projectaddressnyc/getinvolved.html">Get Involved</a></li>
                 <li><a href="https://projectaddressmmp460.github.io/projectaddressnyc/index.html">Home</a></li>
-                <li><a href="#news">News</a></li>
+                <li><a href="https://www.instagram.com/projectaddress/">News</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="https://projectaddressmmp460.github.io/projectaddressnyc/donate.html">Donate</a></li>
 
