link fixes again

--- a/donate.html
+++ b/donate.html
@@ -404,7 +404,7 @@ font-size: 4.5vw;
 <div class="row" id="nav">   
 
 <ul class="topnav">
-  <li><a class="active" href="#home">Get Involved</a></li>
+  <li><a class="active" href="https://projectaddressmmp460.github.io/projectaddressnyc/getInvolved.html">Get Involved</a></li>
   <li><a href="https://www.instagram.com/projectaddress/">News</a></li>
   <li><a href="#contact">Contact</a></li>
    <li><a href="https://projectaddressmmp460.github.io/projectaddressnyc/index.html">Home</a></li>
